[gd_scene load_steps=2 format=3 uid="uid://7rbtbqx0tkjc"]

[ext_resource type="Script" path="res://UI/SetEncounterWindow.gd" id="1_rdvd6"]

[node name="SetEncounterWindow" type="Window"]
title = "Set Encounter"
initial_position = 1
size = Vector2i(200, 225)
visible = false
script = ExtResource("1_rdvd6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(190, 35)
layout_mode = 2
text = "Terrain:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "T7"
popup/item_0/id = 0
popup/item_1/text = "T6"
popup/item_1/id = 1

[node name="BothMountToggle" type="CheckButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Both Mountains"

[node name="DiagonalsToggle" type="CheckButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Include Diagonals"

[node name="ResetToggle" type="CheckButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Reset Encounter"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Fill Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fill"

[node name="Accept Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Accept"

[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Fill Button" to="." method="hide"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Fill Button" to="." method="_on_fill_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Accept Button" to="." method="hide"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Accept Button" to="." method="_on_accept_button_pressed"]
